# duiplant

./: .gitignore  README.md  新手必读.txt
src/: .gitignore  CMakeLists.txt
src/3rd/WTL81/AppWizCE/: setup90.js
src/3rd/WTL81/AppWizMobile/: setup80.js
src/3rd/scriptModule/luaScriptModule/: luaScriptModule2010.sln
src/3rd/zlib/: zlib.vcxproj  zlib.vcxproj.filters
src/DUIEngine/: DUIEngine.2010.sln  DUIEngine.vcxproj
src/DUIEngine/include/: DuiFrameDropTarget.h  DuiListCtrl.h  DuiScriptModule.h  duihostwnd.h  duirealwnd.h  duistringpool.h  duiwndstyle.h
src/DUIEngine/src/: DragWnd.cpp  DuiCalendar.cpp  DuiComboBox.cpp  DuiHeaderCtrl.cpp  DuiListCtrl.cpp  DuiRichEdit.cpp  DuiSliderBar.cpp  DuiSplitWnd.cpp  DuiTipCtrl.cpp  DuiWndFactoryManager.cpp  MemDC.cpp  duiItempanel.cpp  duiframe.cpp  duihostwnd.cpp  duiitembox.cpp  duiskin.cpp  duistringpool.cpp  duiwndcmnctrl.cpp  duiwndstyle.cpp
src/DUIEngine/vsprop/: duiengine-build.props  shadow-prebuild.props  wtl-root.props
src/addons/: CMakeLists.txt
src/addons/luaScript/lua-5.1/: lua.vcxproj
src/addons/luaScript/luaScriptModule/: luaScriptModule.cpp  luaScriptModule.vcproj  stdafx.h
src/addons/zlib/: CMakeLists.txt  zlib.2010.sln  zlib.h
src/cmake/: duix_build_config.cmake  duix_utils.cmake  pcl_targets.cmake  pcl_utils.cmake
src/duiplant/: CMakeLists.txt  DUIEngine.2010.sln  DUIEngine.vcxproj  DUIEngine.vcxproj.filters
src/duiplant/cmake/: mfc.cmake.in
src/duiplant/include/: DragWnd.h  DuiActiveX.h  DuiEventSubscriber.h  DuiHeaderCtrl.h  DuiHotKeyCtrl.h  DuiSkinBase.h  DuiSplitWnd.h  DuiUtilities.h  DuiWindowManager.h  DuiWndFactoryManager.h  duiframe.h  duiitembox.h  duilistboxex.h  duiresprovider.h  duiresproviderbase.h  duistd.h  duitreebox.h
src/duiplant/include/dui/: DragWnd.h  DuiActiveX.h  DuiCSS.h  DuiCaption.h  DuiFrameDropTarget.h  DuiHeaderCtrl.h  DuiListCtrl.h  DuiLogger.h  DuiMenu.h  DuiMessageBox.h  DuiRichEdit.h  DuiSingletonMap.h  DuiSliderBar.h  DuiSplitWnd.h  DuiTimerEx.h  DuiTipCtrl.h  DuiTreeCtrl.h  FocusManager.h  SimpleWnd.h  (+13 more)
src/duiplant/src/: Accelerator.cpp  DragWnd.cpp  DuiActiveX.cpp  DuiCSS.cpp  DuiDateTimeEdit.cpp  DuiDropDown.cpp  DuiFrameDropTarget.cpp  DuiHeaderCtrl.cpp  DuiHotKeyCtrl.cpp  DuiImgDecoder_Def.cpp  DuiListCtrl.cpp  DuiRichEdit.cpp  DuiSkinBase.cpp  DuiSkinPool.cpp  DuiThreadActiveWndManager.cpp  DuiTipCtrl.cpp  FocusManager.cpp  MemDC.cpp  MenuWndHook.cpp  SimpleWnd.cpp  dllmain.cpp  duifontpool.cpp  duiimage.cpp  duiimgpool.cpp  duilistbox.cpp  duilistboxex.cpp  duirealwnd.cpp  duiresprovider.cpp  duiscrollbar.cpp  duistd.cpp  duistringpool.cpp  duitreebox.cpp  duiwnd.cpp  duiwndcmnctrl.cpp  duiwndpanel.cpp  duiwndstyle.cpp  duiwndtabctrl.cpp  gdialpha.cpp
src/duiplant/vsprop/: duiengine-root.props  shadow-build.props  wtl-root.props
src/duixengine/: CMakeLists.txt  DUIEngine.vcproj  DUIEngine.vcxproj  DUIEngine.vcxproj.filters
src/duixengine-installation/vsprops/: duiengine-portal.props  wtl-root.props
src/duixengine/src/: Accelerator.cpp  DuiActiveX.cpp  DuiCalendar.cpp  DuiCaption.cpp  DuiComboBox.cpp  DuiDropDown.cpp  DuiEventSet.cpp  DuiHotKeyCtrl.cpp  DuiLogger.cpp  DuiMenu.cpp  DuiMessageBox.cpp  DuiRichEdit.cpp  DuiSkinBase.cpp  DuiSliderBar.cpp  DuiSplitWnd.cpp  DuiSystem.cpp  DuiTimerEx.cpp  DuiTreeCtrl.cpp  DuiUtilities.cpp  DuiWindowManager.cpp  DuiWndFactoryManager.cpp  FocusManager.cpp  GradientFillHelper.cpp  Name2ID.cpp  duiDefaultLogger.cpp  duiItempanel.cpp  duicolor.cpp  duiframe.cpp  duihostwnd.cpp  duiitembox.cpp  duilistbox.cpp  duilistboxex.cpp  duiresprovider.cpp  duiskin.cpp  duiwndpanel.cpp
src/duixengine/vsprop/: duiengine-build.props  shadow-prebuild.props
src/examples/: CMakeLists.txt
src/examples/3d_demo/: 3ddemo.cpp  3ddemo.rc  3ddemo.vcxproj  3ddemo.vcxproj.filters  MainDlg.h  UIHander.h
src/examples/ani_demo/: anidemo.sln  anidemo.vcxproj
src/examples/childduiwnd/: DuiChildUI.sln  DuiChildUI2010.sln  duichildui.rc  duichildui.vcxproj  stdafx.h
src/examples/dui_demo/: DuiDemo.vcxproj  DuiDemo.vcxproj.filters
src/examples/duie-ie/: ReadMe.txt  duieie.rc  duieie.vcxproj  stdafx.h
src/examples/duiskin/: CMakeLists.txt  duidemo2008.sln
src/examples/gifplayer/: gifplayer.cpp
src/examples/ie-demo2/: DuiWebBrowser.h  duieie.vcxproj.filters
src/examples/iectrl.wtl/: MainDlg.cpp  iectrlwtl.cpp  iectrlwtl.sln  iectrlwtl.vcxproj
src/examples/image3d/: image3d.vcxproj.filters  image3d2010.sln
src/examples/mfc.demo/: UIHander.h  mfcdemo.cpp  mfcdemo.rc  mfcdemo2010.sln
src/examples/qq_demo/: ReadMe.txt  UIHander.cpp  duiembedbutton.h  stdafx.h
src/extra/controls.extend/: DuiColorPicker.cpp  DuiColorPicker.h  DuiSpinEdit.h  DuiWebBrowser.h  DxDateTimeEdit.cpp  DxDateTimeEdit.h
src/installation/: CMakeLists.txt
src/samples/3d_demo/: 3ddemo2010.sln
src/samples/ani_demo/: UIHander.cpp  anidemo.cpp  anidemo.rc  anidemo2010.sln
src/samples/childduiwnd/: DuiChild.cpp  duichildui.cpp  duichildui.vcxproj.filters
src/samples/dui_demo/: DuiSkinGif.h
src/samples/duie-ie/: UIHander.cpp  duieie.cpp  duieie.vcxproj.filters  duieie2010.sln
src/samples/gifplayer/: MainDlg.cpp  UIHander.cpp  gifplayer.sln  gifplayer.vcproj  gifplayer.vcxproj  resource.h
src/samples/ie-demo2/: UIHander.cpp  duieie.vcproj  duieie.vcxproj
src/samples/iectrl.wtl/: iectrlwtl.rc  iectrlwtl.vcproj  iectrlwtl2010.sln  stdafx.h
src/samples/image3d/: image3d.vcxproj
src/samples/mfc.demo/: MainDlg.cpp  UIHander.cpp  mfcdemoDlg.h
src/samples/qq_demo/: Dui3DView.h  QQDemo.cpp  QQDemo.vcxproj  QQDemo.vcxproj.filters
src/tools/SoUIEditor/: NewSkinDlg.cpp  ScintillaWnd.h  SkinView.h  SoUIEditor.cpp  SoUIEditor.sln  SoUIEditor.vcproj  SoUIEditor.vcxproj  SoUIEditor.vcxproj.filters  SoUIEditor2010.sln  SoUIHelper.cpp  stdafx.h
src/tools/residbuilder/: residbuilder.cpp  residbuilder2.sln  residbuilder2.vcproj  residbuilder2.vcxproj  residbuilder2.vcxproj.filters  residbuilder2A.sln  stdafx.h
src/tools/wizard.setup/: resource.h  stdafx.h  wizard.setup.rc  wizard.setup.vcxproj  wizard.setup.vcxproj.filters  wizard.setup2010.sln
(+542 files in other folders)
